--- a/javaJvm/pom.xml
+++ b/javaJvm/pom.xml
@@ -36,6 +36,12 @@
             <version>1.72</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.72</version>
+        </dependency>
+
     </dependencies>
 
     <build>
